//! brief List of major changes.

@section v2_15 Changes with libapreq2-2.15 (released July 31, 2020)

- SECURITY: CVE-2019-12412 (cve.mitre.org)
  C API [Max Kellermann]
  Fix a NULL pointer dereference when parsing malformed
  multipart data in apreq_parse_multipart().

- C API [Yann Ylavic]
  In apreq_brigade_concat(), fix memory handling and create
  the FILE bucket correctly.

@section v2_14 Changes with libapreq2-2.14 (not released)

- Build [stevehay]
  Fix httpd-2.4.x build for Win32.

- Build [Richard M Kandarian]
  Fix debug build for Win32.

- C API [joes]
  Fix mod_apreq2's config merging.

- Perl glue
  Updated license info in META.yml
  Updated documentation for Apache2::Cookie

@section v2_13 Changes with libapreq2-2.13 (released December 3, 2010)

- HTTP Only Cookie [Robert Stone & Adam Prime]
  The C and Perl Cookie APIs now support an HttpOnly flag to tell 
  user agents to deny client-side script access to the cookie

@section v2_12 Changes with libapreq2-2.12 (released March 13, 2009)

- C API [joes]
  Make the cookie parser a little more flexible.

@section v2_11 Changes with libapreq2-2.11 (not released)

- Interactive CGI module [issac]
  Allow cgi module to interactively prompt for parameters and cookies when
  running a script from the command line and not from a CGI interface

@section v2_10 Changes with libapreq2-2.10 (not released)

- Perl Glue [joes]
  Fix the linking of the perl modules to libapreq2 and libapr
  on Solaris.

- Perl Glue [joes]
  Fix install-time linking issue of the .so modules.
  Previously they would remain linked against the src
  library path, not the install path.

- C API [joes]
  Add optional interface for apreq_handle_apache2().

- C API [joes]
  Clean up buggy apreq_hook_find_param().

- Perl Glue Build [Philip M. Gollucci]
  config.status format changed format yet again in autoconf 2.62+.

- License [Mladen Turk]
  Add libapreq.rc and generate libapreq.res

- Build [Mladen Turk]